<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.GuideFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
          android:id="@+id/imageView"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:src="@drawable/dypurin"
          app:layout_constraintBottom_toTopOf="@+id/guideline7"
          app:layout_constraintEnd_toStartOf="@+id/guideline5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
          android:id="@+id/guideTB"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginBottom="16dp"
          android:text="@string/guide"
          android:textSize="24sp"
          app:layout_constraintBottom_toTopOf="@+id/guideline8"
          app:layout_constraintEnd_toStartOf="@+id/guideline5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <ImageView
          android:id="@+id/imageView3"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginTop="32dp"
          android:src="@drawable/dubstix"
          app:layout_constraintBottom_toTopOf="@+id/guideline7"
          app:layout_constraintEnd_toStartOf="@+id/guideline6"
          app:layout_constraintStart_toStartOf="@+id/guideline5"
          app:layout_constraintTop_toBottomOf="@+id/cprTB" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.66" />

        <TextView
          android:id="@+id/guide2Txt"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginBottom="16dp"
          android:text="@string/guide2Txt"
          android:textSize="24sp"
          app:layout_constraintBottom_toTopOf="@+id/guideline8"
          app:layout_constraintEnd_toStartOf="@+id/guideline6"
          app:layout_constraintStart_toStartOf="@+id/guideline5"
          app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <ImageView
          android:id="@+id/imageView4"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:src="@drawable/insertstix"
          app:layout_constraintBottom_toTopOf="@+id/guideline7"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="@+id/guideline6"
          app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
          android:id="@+id/guide3Txt"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginBottom="16dp"
          android:text="@string/guide3Txt"
          android:textSize="24sp"
          app:layout_constraintBottom_toTopOf="@+id/guideline8"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="@+id/guideline6"
          app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.98" />

        <TextView
          android:id="@+id/cprTB"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:textSize="30sp"
          android:textColor="@color/black"
          android:text="Cpr"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>